--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST='db4free.net'
 DB_PORT=3306
 DB_DATABASE='vutfitmafie'
 DB_USERNAME='vutfitmafie'
-DB_PASSWORD='vutfitmafie'
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
